src/objects/DSI_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>Checks whether or not the DSI line item is currently active.</description>
        <formula>IF(TODAY() &lt;  Start_Date__c , FALSE, 
IF ( ISBLANK(  End_Date__c ), FALSE, 
IF(TODAY() &lt;= End_Date__c , TRUE, FALSE)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether or not the DSI line item is currently active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSI_Line_Item_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI Line Item (Service)</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>DSI Line Item (Service)</relationshipLabel>
        <relationshipName>DSI_Line_Items_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSI_Line_Item_Software__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI Line Item (Software)</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>DSI Line Item (Software)</relationshipLabel>
        <relationshipName>DSI_Line_Item_Software</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSI_Product_Name__c</fullName>
        <label>DSI Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>DSI Line Items</relationshipLabel>
        <relationshipName>DSI_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsJDEUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsJDEUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JDE_CreatedDate__c</fullName>
        <label>JDE CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JDE_End_Date__c</fullName>
        <label>JDE End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastUpdatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DSI_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastUpdateddate__c</fullName>
        <label>LastUpdateddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Num_Periods__c</fullName>
        <label># Periods</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DSI Line Items</relationshipLabel>
        <relationshipName>DSI_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>(Product__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>DSI Line Items</relationshipLabel>
        <relationshipName>Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>DSI Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DSI Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSI Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>